--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -4,6 +4,7 @@
 @import "components/buttons";
 @import "components/layout";
 @import "components/navs";
+@import "components/captions";
 @import "components/markers";
 @import "components/preload";
 @import "components/swiper";
