--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -961,7 +961,11 @@ svg {
   pointer-events: none; }
   .switch-loading > span {
     display: inline-block;
-    position: relative; }
+    position: relative;
+    -webkit-animation: loadingLetter ease-in-out 3s infinite forwards;
+            animation: loadingLetter ease-in-out 3s infinite forwards;
+    -webkit-transform-origin: 50% 50%;
+            transform-origin: 50% 50%; }
   .switch-loading > span:nth-of-type(1) {
     -webkit-animation-delay: 50ms;
     animation-delay: 50ms; }
@@ -1023,11 +1027,7 @@ svg {
     -webkit-animation-delay: 1000ms;
     animation-delay: 1000ms; }
   .loading .switch-loading {
-    display: block;
-    -webkit-animation: loadingLetter ease-in-out 3s infinite forwards;
-            animation: loadingLetter ease-in-out 3s infinite forwards;
-    -webkit-transform-origin: 50% 50%;
-            transform-origin: 50% 50%; }
+    display: block; }
 
 .switch-background {
   position: absolute;
