--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -7,6 +7,7 @@
 @import "components/captions";
 @import "components/markers";
 @import "components/preload";
+@import "components/scrollbar";
 @import "components/swiper";
 @import "components/switch";
 @import "components/typography";
