--- a/src/scss/sections/_overview.scss
+++ b/src/scss/sections/_overview.scss
@@ -24,7 +24,7 @@
         z-index: 4;
     }
     @media screen and (max-height: 719px) and (orientation:portrait) {
-        max-height: 100vh;
+        max-height: calc(100vh - 40px);
     }
 }
 
@@ -45,7 +45,7 @@
         opacity: 1;
     }
     @media screen and (max-height: 719px) and (orientation:portrait) {
-        max-height: 100vh;
+        max-height: calc(100vh - 40px);
     }
 }
 
