--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -417,15 +417,12 @@ button,
 
 html,
 body {
+  position: relative;
   width: 100%;
-  height: 100%;
   margin: 0;
   padding: 0;
   background: #e1e1e1;
   color: #28292b; }
-
-body.locked {
-  overflow: hidden; }
 
 .page {
   width: 100vw;
@@ -1277,6 +1274,10 @@ footer {
   @media (max-width: 991.98px) {
     .nav-footer {
       padding: 10px 0; } }
+
+body.locked {
+  height: 100vh;
+  overflow: hidden; }
 
 .section-overview {
   display: block;
