--- a/src/scss/components/_layout.scss
+++ b/src/scss/components/_layout.scss
@@ -1,18 +1,11 @@
 html,
 body {
+    position: relative;
     width: 100%;
-    height: 100%; // overflow: hidden;
     margin: 0;
     padding: 0;
     background: $background;
     color: $foreground;
-}
-
-body {
-    // perspective: 500;
-    &.locked {
-        overflow: hidden;
-    }
 }
 
 .page {
