--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -106,6 +106,9 @@ button,
             transform: translateX(10px);
         }
     }
+    .loading & {
+        display: none;
+    }
 }
 
 .btn-more {
