--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -697,6 +697,8 @@ svg {
   @media (max-width: 767.98px) {
     .captions-item {
       top: auto;
+      left: 0;
+      right: 50px;
       bottom: -10px;
       margin: 0;
       padding: 15px; }
