--- a/src/scss/sections/_overview.scss
+++ b/src/scss/sections/_overview.scss
@@ -73,6 +73,7 @@ body {
         &.hidden-md-up {
             width: 600px;
             max-width: calc(100vw - 140px);
+            margin-top: 10vh;
         }
     }
     .numbers {
