--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -171,6 +171,15 @@ button,
             font-weight: 600;
             transform: none !important;
         }
+        &:hover,
+        &.active {
+            .title {
+                display: none;
+            }
+            .num {
+                transform: none !important;
+            }
+        }
     }
 }
 
