--- a/src/scss/components/_captions.scss
+++ b/src/scss/components/_captions.scss
@@ -52,9 +52,12 @@ $caption: $black;
         color: $caption;
     }
     .description {
-        text-transform: uppercase;
+        // text-transform: uppercase;
         max-width: 390px;
         color: $caption;
+        .red {
+            padding: 0 5px;
+        }
     }
     &:first-child,
     &:last-child {
