--- a/src/scss/components/_switch.scss
+++ b/src/scss/components/_switch.scss
@@ -11,10 +11,14 @@
     z-index: 10;
     transform: translateX(-50%);
     .flex-left {
+        position: relative;
         padding-left: 15px;
+        z-index: 99;
     }
     .flex-right {
+        position: relative;
         padding-right: 15px;
+        z-index: 99;
     }
     .btn-overview {
         font-size: 14px;
@@ -34,6 +38,7 @@
 
 .switch-track {
     position: relative;
+    /*
     &:before,
     &:after {
         content: '';
@@ -65,6 +70,7 @@
             right: -5px;
         }
     }
+    */
     .loading & {
         display: none;
     }
