--- a/src/scss/components/_switch.scss
+++ b/src/scss/components/_switch.scss
@@ -11,14 +11,10 @@
     z-index: 10;
     transform: translateX(-50%);
     .flex-left {
-        position: relative;
         padding-left: 15px;
-        z-index: 99;
     }
     .flex-right {
-        position: relative;
         padding-right: 15px;
-        z-index: 99;
     }
     .btn-overview {
         font-size: 14px;
@@ -111,9 +107,11 @@
 
 .switch-slider {
     position: relative;
-    width: 100%;
+    width: 40px;
     height: 100%;
     z-index: 99;
+    left: 50%;
+    margin-left: -20px;
     transform: translateX(0%);
     .switch-thumb {
         position: relative;
